SERVER-20836 copydb with invalid db name crashes mongos